# aliyun-log-cpp-sdk

./: CMakeLists.txt
.github/workflows/: ubuntu-build.yml  windows-build.yml
cmake/: build-shared.cmake  build.cmake
